--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
-    "os": "^0.1.1"
+    "js-sha3": "^0.8.0",
+    "jsonwebtoken": "^8.5.1",
+    "monk": "^7.3.2",
+    "os": "^0.1.1",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.8.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
