--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cluster": "^0.7.7",
     "cors": "^2.8.5",
     "crypto-random-string": "^3.3.0",
+    "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
@@ -21,7 +22,8 @@
     "monk": "^7.3.2",
     "os": "^0.1.1",
     "reflect-metadata": "^0.1.13",
-    "typedi": "^0.8.0"
+    "typedi": "^0.8.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
