--- a/web/package.json
+++ b/web/package.json
@@ -1,14 +1,10 @@
 {
   "name": "lazymonitor",
   "version": "1.0.0",
-  "description": "",
-  "main": "./dist/index.js",
   "scripts": {
-    "dev": "nodemon",
-    "run": "node ./dist/index.js"
+    "start": "ts-node ./src/index.ts"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "cluster": "^0.7.7",
     "cors": "^2.8.5",
@@ -22,12 +18,13 @@
     "monk": "^7.3.2",
     "os": "^0.1.1",
     "reflect-metadata": "^0.1.13",
+    "ts-node": "^9.1.0",
     "typedi": "^0.8.0",
+    "typescript": "^4.1.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
-    "@types/node": "^14.14.10",
-    "nodemon": "^2.0.6"
+    "@types/node": "^14.14.10"
   }
 }
