--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "monk": "^7.3.2",
     "os": "^0.1.1",
     "reflect-metadata": "^0.1.13",
+    "sanitize": "^2.1.0",
     "ts-node": "^9.1.0",
     "typedi": "^0.8.0",
     "typescript": "^4.1.2",
