Added Monitor service for supreme and redis

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,14 @@
 version: '3.4'
 
 services:
-  web:
-    image: lsb
+  api:
+    image: lsb-api
     depends_on:
       - db
+      - redis
     links:
       - db
+      - redis
     volumes:
       - ./web/src:/usr/src/app/src
     ports:
@@ -16,12 +18,31 @@ services:
       - DB_CONNECTION=db:27017/lazyshoebotdb
       - TOKEN_SECRET=1aWH4OpjF7yi7o6kzAsugxFaiNPS42Ma
       - PEPPER=4jpXTUuGbKWSvVVkNq6m
+  monitor:
+    image: lsb-monitor
+    depends_on:
+      - redis
+    links:
+      - redis
+    volumes:
+      - ./services/monitor/src:/usr/src/app/src
   db:
     image: mongo
     volumes:
       - dbVolume:/data/db
     ports:
       - 27017:27017
+  redis:
+    image: redis
+    volumes:
+      - redisVolume:/data
+    ports:
+      - 6379:6379
+  redisInsight:
+    image: redislabs/redisinsight
+    ports:
+     - 8001:8001
 
 volumes:
   dbVolume:
+  redisVolume:
