--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,7 @@
 FROM node
 WORKDIR /usr/src/app
-COPY ["./web/package.json", "./web/package-lock.json", "./"] 
+COPY ["./package.json", "./package-lock.json", "./"] 
 RUN npm install --production
-COPY ./web ./
+COPY ./ ./
 EXPOSE 3000
 CMD npm start
