--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,16 +9,8 @@ services:
       - api
     ports:
       - 80:80
-      - 443:443
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-  certbot:
-    image: certbot/certbot:1.7.0
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
+      - ./nginx.conf:/etc/nginx/nginx.dev.conf
   api:
     image: lsb-api
     depends_on:
