--- a/nginx.conf
+++ b/nginx.conf
@@ -10,7 +10,28 @@ events {
 http {
   server {
     listen 80;
-    server_name localhost 127.0.0.1;
+    server_name lazyshoebot.com;
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot;
+    }
+
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
+}
+
+http {
+  server {
+    listen 443 ssl;
+    server_name lazyshoebot.com;
+
+    ssl_certificate /etc/letsencrypt/live/lazyshoebot.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/lazyshoebot.com/privkey.pem;
+
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
     location /api {
       proxy_pass          http://api:3000;
