--- a/nginx.dev.conf
+++ b/nginx.dev.conf
@@ -17,9 +17,9 @@ http {
       proxy_set_header    X-Forwarded-For $remote_addr;
     }
 
-    location / {
-      proxy_pass          http://frontend:8080;
-      proxy_set_header    X-Forwarded-For $remote_addr;
-    }
+    #location / {
+    #  proxy_pass          http://frontend:8080;
+    #  proxy_set_header    X-Forwarded-For $remote_addr;
+    #}
   }
 }
