--- a/nginx.conf
+++ b/nginx.conf
@@ -37,5 +37,10 @@ http {
       proxy_pass          http://api:3000;
       proxy_set_header    X-Forwarded-For $remote_addr;
     }
+
+    location / {
+      proxy_pass          http://frontend:8080;
+      proxy_set_header    X-Forwarded-For $remote_addr;
+    }
   }
 }
