--- a/api/package.json
+++ b/api/package.json
@@ -2,7 +2,8 @@
   "name": "api",
   "version": "1.0.0",
   "scripts": {
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "build": "tsc --build"
   },
   "dependencies": {
     "cluster": "^0.7.7",
@@ -11,22 +12,20 @@
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "handy-redis": "^2.0.3",
     "http": "0.0.1-security",
     "js-sha3": "^0.8.0",
     "jsonwebtoken": "^8.5.1",
     "monk": "^7.3.2",
     "os": "^0.1.1",
-    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "sanitize": "^2.1.0",
-    "ts-node": "^9.1.0",
     "typedi": "^0.8.0",
-    "typescript": "^4.1.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
-    "@types/node": "^14.14.10"
+    "@types/node": "^14.14.10",
+    "typescript": "^4.1.2",
+    "ts-node": "^9.1.0"
   }
 }
