--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
