--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-cookie-accept-decline": "^5.4.0",
