--- a/nginx.conf
+++ b/nginx.conf
@@ -10,36 +10,80 @@ events {
 http {
   server {
     listen 80;
-    server_name lazyshoebot.com;
+    server_name lazyshoebot.com www.lazyshoebot.com;
 
     location /.well-known/acme-challenge/ {
-      root /var/www/certbot;
+      root /var/www/certbot/lazyshoebot.com;
     }
 
     location / {
       return 301 https://$host$request_uri;
     }
   }
-}
 
-http {
+  
+  server {
+    listen 80;
+    server_name app.lazyshoebot.com;
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot/app.lazyshoebot.com;
+    }
+
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
+
+  
+  server {
+    listen 80;
+    server_name api.lazyshoebot.com;
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot/api.lazyshoebot.com;
+    }
+
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
+  
   server {
     listen 443 ssl;
-    server_name lazyshoebot.com;
+    server_name lazyshoebot.com www.lazyshoebot.com;
 
     ssl_certificate /etc/letsencrypt/live/lazyshoebot.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/lazyshoebot.com/privkey.pem;
 
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-    
-    location /api {
-      proxy_pass          http://api:3000;
+    location / {
+      proxy_pass          http://frontend:3002;
       proxy_set_header    X-Forwarded-For $remote_addr;
     }
+  }
+  
+  server {
+    listen 443 ssl;
+    server_name app.lazyshoebot.com;
+
+    ssl_certificate /etc/letsencrypt/live/app.lazyshoebot.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/app.lazyshoebot.com/privkey.pem;
 
     location / {
-      proxy_pass          http://frontend:8080;
+      proxy_pass          http://app-frontend:3001;
+      proxy_set_header    X-Forwarded-For $remote_addr;
+    }
+  }
+  
+  server {
+    listen 443 ssl;
+    server_name api.lazyshoebot.com;
+
+    ssl_certificate /etc/letsencrypt/live/api.lazyshoebot.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.lazyshoebot.com/privkey.pem;
+
+    location / {
+      proxy_pass          http://api:3000;
       proxy_set_header    X-Forwarded-For $remote_addr;
     }
   }
