--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,61 +1,60 @@
 version: '3.4'
 
 services:
-  nginx:
-    image: 487233414922.dkr.ecr.eu-central-1.amazonaws.com/lsb-nginx:latest
+  # reverse-proxy:
+  #   image: nginx:1.19.5
+  #   depends_on:
+  #     - api
+  #     - frontend
+  #   links:
+  #     - api
+  #     - frontend
+  #   ports:
+  #     - 80:80
+  #   volumes:
+  #     - ./nginx.dev.conf:/etc/nginx/nginx.conf
+  # api:
+  #   image: lsb-api
+  #   depends_on:
+  #     - db
+  #   links:
+  #     - db
+  #   volumes:
+  #     - ./api/src:/usr/src/app/src
+  #   env_file: 
+  #     - .env
+  # frontend:
+  #  image: lsb-frontend
+  #  volumes:
+  #    - ./frontend/src:/app/src
+  monitor:
+    image: lsb-monitor
     depends_on:
-      - api
-      - frontend
-      - app-frontend
+      - redis
+      - db
     links:
-      - api
-      - frontend
-      - app-frontend
-    ports:
-      - 80:80
-      - 443:443
+      - redis
+      - db
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-  api:
-    image: 487233414922.dkr.ecr.eu-central-1.amazonaws.com/lsb-api:latest
-    depends_on:
-      - db
-    links:
-      - db
+      - ./services/monitor/src:/usr/src/app/src
     env_file: 
       - .env
-    volumes:
-      - ./data/api/logs:/home/node/app/logs
-  frontend:
-    image: 487233414922.dkr.ecr.eu-central-1.amazonaws.com/lsb-frontend:latest
-    depends_on:
-      - api
-    links:
-      - api
-  app-frontend:
-    image: 487233414922.dkr.ecr.eu-central-1.amazonaws.com/lsb-app-frontend:latest
-    depends_on:
-      - api
-    links:
-      - api
-  # monitor:
-  #   image: lsb-monitor
-  #   depends_on:
-  #     - redis
-  #   links:
-  #     - redis
-  #   volumes:
-  #     - ./services/monitor/src:/usr/src/app/src
   db:
     image: mongo
     volumes:
-      - dbVolume:/data/db
+      - mongoVolume:/data/db
     ports:
       - 27017:27017
     env_file: 
       - .env
+  redis:
+    image: redis
+    volumes:
+      - redisVolume:/data
+    ports:
+      - 6379:6379
+  
 
 volumes:
-  dbVolume:
+  mongoVolume:
+  redisVolume:
