--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,26 +1,9 @@
-FROM node:15.5.1-alpine3.10 AS node
-
-# Builder Stage
-
-FROM node AS builder
+FROM node:15.5.1-alpine3.10
+ENV VUE_APP_BASE_URL http://localhost
+ENV VUE_APP_API_URL http://localhost/api
 WORKDIR /app
-RUN npm install -g @vue/cli
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
-
-# Final Stage
-
-FROM node AS final
-ENV NODE_ENV production
-RUN apk --no-cache -U upgrade
-RUN mkdir -p /home/node/app/dist && chown -R node:node /home/node/app
-WORKDIR /home/node/app
-RUN npm install -g pm2
-COPY --chown=node:node package*.json process.yml server.js ./
-USER node
-RUN npm install --only=production
-COPY --chown=node:node --from=builder /app/dist ./dist
-EXPOSE 3002
-ENTRYPOINT ["pm2-runtime", "./process.yml"]
+EXPOSE 8080
+CMD npm run serve
