--- a/services/monitor/Dockerfile
+++ b/services/monitor/Dockerfile
@@ -1,4 +1,4 @@
-FROM node
+FROM node:15.5.1-alpine3.10
 WORKDIR /usr/src/app
 COPY ["./package.json", "./package-lock.json", "./"] 
 RUN npm install --production
