--- a/services/monitor/package.json
+++ b/services/monitor/package.json
@@ -5,6 +5,7 @@
     "start": "ts-node ./src/index.ts"
   },
   "dependencies": {
+    "bull": "^3.20.0",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
     "handy-redis": "^2.0.3",
@@ -17,6 +18,7 @@
     "typescript": "^4.1.2"
   },
   "devDependencies": {
+    "@types/bull": "^3.15.0",
     "@types/node": "^14.14.10"
   }
 }
