--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,87 +1,51 @@
 version: '3.4'
 
 services:
-  # reverse-proxy:
-  #   image: nginx:1.19.5
-  #   depends_on:
-  #     - api
-  #     - frontend
-  #   links:
-  #     - api
-  #     - frontend
-  #   ports:
-  #     - 80:80
-  #   volumes:
-  #     - ./nginx.dev.conf:/etc/nginx/nginx.conf
+  nginx:
+    image: 487233414922.dkr.ecr.eu-central-1.amazonaws.com/lsb-nginx:latest
+    depends_on:
+      - api
+    links:
+      - api
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./data/certbot/conf:/etc/letsencrypt
+      - ./data/certbot/www:/var/www/certbot
   api:
-    image: lsb-api
+    image: 487233414922.dkr.ecr.eu-central-1.amazonaws.com/lsb-api:latest
     depends_on:
-      - db
-      - dynamo
+      - redis
     links:
-      - db
-      - dynamo
-    ports:
-      - 3000:3000
+      - redis
     volumes:
-      - ./api/src:/usr/src/app/src
-  # frontend:
-  #  image: lsb-frontend
-  #  volumes:
-  #    - ./frontend/src:/app/src
-  # monitor:
-  #   image: lsb-monitor
-  #   depends_on:
-  #     - redis
-  #     - db
-  #   links:
-  #     - redis
-  #     - db
-  #   ports:
-  #     - 6970:6970
-  #   env_file: 
-  #     - ./monitor/.env
-  # monitor-frontend:
-  #   image: lsb-monitor-frontend
-  #   depends_on:
-  #     - monitor
-  #   links:
-  #     - monitor
-  #   ports:
-  #     - 6969:6969
-  db:
-    image: mongo
-    volumes:
-      - mongoVolume:/data/db
-    ports:
-      - 27017:27017
-    env_file: 
-      - .env
-  db-express:
-    image: mongo-express
-    depends_on:
-      - db
-    links:
-      - db
-    ports:
-      - 8081:8081
+      - ./data/api/logs:/home/node/app/logs
     env_file:
       - .env
-  # redis:
-  #   image: redis
-  #   volumes:
-  #     - redisVolume:/data
-  #   ports:
-  #     - 6379:6379
-  dynamo:
-    image: amazon/dynamodb-local
-    ports:
-      - 8000:8000
+  monitor:
+    image: 487233414922.dkr.ecr.eu-central-1.amazonaws.com/lsb-monitor:latest
+    depends_on:
+      - redis
+      - scraper
+    links:
+      - redis
+      - scraper
     volumes:
-      - dynamoVolume:/home/dynamodblocal
-  
+      - ./data/monitor/logs:/home/node/app/logs
+    env_file:
+      - .env
+  scraper:
+    image: 487233414922.dkr.ecr.eu-central-1.amazonaws.com/lsb-scraper:latest
+    ports:
+      - 50069:50069
+  redis:
+    image: redis
+    volumes:
+      - redisVolume:/data
+    ports:
+      - 6379:6379
 
 volumes:
-  mongoVolume:
   redisVolume:
-  dynamoVolume:
