--- a/nginx.conf
+++ b/nginx.conf
@@ -10,15 +10,26 @@ events {
 http {
   server {
     listen 80;
-    server_name localhost 127.0.0.1;
-    
-    location /api {
-      proxy_pass          http://api:3000;
-      proxy_set_header    X-Forwarded-For $remote_addr;
+    server_name api.lazyshoebot.com;
+
+    location /.well-known/acme-challenge/ {
+      root /var/www/certbot/api.lazyshoebot.com;
     }
 
     location / {
-      proxy_pass          http://frontend:8080;
+      return 301 https://$host$request_uri;
+    }
+  }
+
+  server {
+    listen 443 ssl;
+    server_name api.lazyshoebot.com;
+
+    ssl_certificate /etc/letsencrypt/live/api.lazyshoebot.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.lazyshoebot.com/privkey.pem;
+
+    location / {
+      proxy_pass          http://api:3000;
       proxy_set_header    X-Forwarded-For $remote_addr;
     }
   }
